// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`文字排版 快照测试 基本文字排版 1`] = `
<h2
<<<<<<< HEAD
  className="sc-AxjAm ibFIMm sinoui-typography sinoui-typography--h2"
=======
  className="Typography__TypographyWrapper-sc-12agh80-0 bOtZww sinoui-typography sinoui-typography--h2"
>>>>>>> origin/bottomNavigation
  color="textPrimary"
  type="h2"
>
  H2
</h2>
`;

exports[`文字排版 快照测试 设置属性 1`] = `
Array [
  <h2
<<<<<<< HEAD
    className="sc-AxjAm ibFIMm sinoui-typography sinoui-typography--h2"
=======
    className="Typography__TypographyWrapper-sc-12agh80-0 bOtZww sinoui-typography sinoui-typography--h2"
>>>>>>> origin/bottomNavigation
    color="textPrimary"
    type="h2"
  >
    H2
  </h2>,
  <h2
<<<<<<< HEAD
    className="sc-AxjAm jiCLlO sinoui-typography sinoui-typography--h2"
=======
    className="Typography__TypographyWrapper-sc-12agh80-0 hHcDLA sinoui-typography sinoui-typography--h2"
>>>>>>> origin/bottomNavigation
    color="textPrimary"
    type="h2"
  >
    H2
  </h2>,
  <h2
<<<<<<< HEAD
    className="sc-AxjAm dAOlhv sinoui-typography sinoui-typography--h2"
=======
    className="Typography__TypographyWrapper-sc-12agh80-0 geTmxF sinoui-typography sinoui-typography--h2"
>>>>>>> origin/bottomNavigation
    color="textPrimary"
    type="h2"
  >
    H2
  </h2>,
  <h2
<<<<<<< HEAD
    className="sc-AxjAm ZcZxS sinoui-typography sinoui-typography--h2"
=======
    className="Typography__TypographyWrapper-sc-12agh80-0 fqUBBM sinoui-typography sinoui-typography--h2"
>>>>>>> origin/bottomNavigation
    color="success"
    type="h2"
  >
    H2
  </h2>,
  <h2
<<<<<<< HEAD
    className="sc-AxjAm cCDsxO sinoui-typography sinoui-typography--h2 sinoui-typography--gutter-bottom"
=======
    className="Typography__TypographyWrapper-sc-12agh80-0 biGbeo sinoui-typography sinoui-typography--h2 sinoui-typography--gutter-bottom"
>>>>>>> origin/bottomNavigation
    color="textPrimary"
    type="h2"
  >
    H2
  </h2>,
]
`;

exports[`文字排版 快照测试 颜色设置 1`] = `
Array [
  <h2
<<<<<<< HEAD
    className="sc-AxjAm ibFIMm sinoui-typography sinoui-typography--h2"
=======
    className="Typography__TypographyWrapper-sc-12agh80-0 bOtZww sinoui-typography sinoui-typography--h2"
>>>>>>> origin/bottomNavigation
    color="textPrimary"
    type="h2"
  >
    H2
  </h2>,
  <h2
<<<<<<< HEAD
    className="sc-AxjAm kTBFqR sinoui-typography sinoui-typography--h2"
=======
    className="Typography__TypographyWrapper-sc-12agh80-0 JPRWr sinoui-typography sinoui-typography--h2"
>>>>>>> origin/bottomNavigation
    color="primary"
    type="h2"
  >
    H2
  </h2>,
  <h2
<<<<<<< HEAD
    className="sc-AxjAm hWElxq sinoui-typography sinoui-typography--h2"
=======
    className="Typography__TypographyWrapper-sc-12agh80-0 bTXQWw sinoui-typography sinoui-typography--h2"
>>>>>>> origin/bottomNavigation
    color="secondary"
    type="h2"
  >
    H2
  </h2>,
  <h2
<<<<<<< HEAD
    className="sc-AxjAm ibFIMm sinoui-typography sinoui-typography--h2"
=======
    className="Typography__TypographyWrapper-sc-12agh80-0 bOtZww sinoui-typography sinoui-typography--h2"
>>>>>>> origin/bottomNavigation
    color="textPrimary"
    type="h2"
  >
    H2
  </h2>,
  <h2
<<<<<<< HEAD
    className="sc-AxjAm hkRqlb sinoui-typography sinoui-typography--h2"
=======
    className="Typography__TypographyWrapper-sc-12agh80-0 bZyxrJ sinoui-typography sinoui-typography--h2"
>>>>>>> origin/bottomNavigation
    color="textSecondary"
    type="h2"
  >
    H2
  </h2>,
  <h2
<<<<<<< HEAD
    className="sc-AxjAm gSTTun sinoui-typography sinoui-typography--h2"
=======
    className="Typography__TypographyWrapper-sc-12agh80-0 bIUhGh sinoui-typography sinoui-typography--h2"
>>>>>>> origin/bottomNavigation
    color="error"
    type="h2"
  >
    H2
  </h2>,
  <h2
<<<<<<< HEAD
    className="sc-AxjAm jRWPym sinoui-typography sinoui-typography--h2"
=======
    className="Typography__TypographyWrapper-sc-12agh80-0 dpFkgo sinoui-typography sinoui-typography--h2"
>>>>>>> origin/bottomNavigation
    color="warning"
    type="h2"
  >
    H2
  </h2>,
  <h2
<<<<<<< HEAD
    className="sc-AxjAm ZcZxS sinoui-typography sinoui-typography--h2"
=======
    className="Typography__TypographyWrapper-sc-12agh80-0 fqUBBM sinoui-typography sinoui-typography--h2"
>>>>>>> origin/bottomNavigation
    color="success"
    type="h2"
  >
    H2
  </h2>,
  <h2
<<<<<<< HEAD
    className="sc-AxjAm avwSu sinoui-typography sinoui-typography--h2"
=======
    className="Typography__TypographyWrapper-sc-12agh80-0 igcCdI sinoui-typography sinoui-typography--h2"
>>>>>>> origin/bottomNavigation
    color="info"
    type="h2"
  >
    H2
  </h2>,
]
`;
